# flet-doc-layout

./: .gitignore  README.md  demo.sh  export_onnx.py  pixi.toml  pyproject.toml
src/: block_grouping.py  doctr_inference.py  inference.py  lang_detect.py  line_grouping.py  main.py  reflow_words.py  server_inference.py  skew_detection.py
src/langid/: langid.py
