[project]
name = "flow-reader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flet",
    "pillow",
    "python-djvulibre",
    "flet-libdjvulibre",
    "flet-libcpp-shared",
    "flet-libjpeg",
    "numpy",
    "opencv-python",
    "certifi",
    "pypdfium2",
    "flet-libpdfium",
]

[tool.flet]
product = "Flow Reader"

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "com.veve.flowreader"
min_sdk_version = 24

[tool.flet.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_IMAGES" = true
"android.permission.INTERNET" = true

[tool.flet.dev_packages]
python-djvulibre = "../mobile-forge/dist/python_djvulibre-0.8.8-cp312-cp312-android_24_arm64_v8a.whl"
flet-libdjvulibre = "../mobile-forge/dist/flet_libdjvulibre-3.5.29-0-py3-none-android_24_arm64_v8a.whl"
flet-libcpp-shared = "../mobile-forge/dist/flet_libcpp_shared-27.3.13750724-0-py3-none-android_24_arm64_v8a.whl"
flet-libjpeg = "../mobile-forge/dist/flet_libjpeg-3.0.90-1-py3-none-android_24_arm64_v8a.whl"
numpy = "../mobile-forge/dist/numpy-2.2.2-cp312-cp312-android_24_arm64_v8a.whl"
opencv-python = "../mobile-forge/dist/opencv_python-4.10.0.84-cp312-cp312-android_24_arm64_v8a.whl"
pypdfium2 = "../mobile-forge/dist/pypdfium2-5.8.0-py3-none-android_24_arm64_v8a.whl"
flet-libpdfium = "../mobile-forge/dist/flet_libpdfium-5.8.0-0-py3-none-android_24_arm64_v8a.whl"
